content/kubermatic/v2.25/architecture/compatibility/kkp-components-versioning/_index.en.md
+++
title = "KKP Components"
date = 2021-04-13T20:07:15+02:00
weight = 2

+++

## Kubermatic Kubernetes Platform Components

The following list is only applicable for the KKP version that is currently available. Kubermatic has a strong emphasis on security and reliability
of provided software and therefore releases updates regularly that also include component updates.

| KKP Components                 | Version                        |
| ------------------------------ | ------------------------------ |
| backup/velero                  | 1.10.1                         |
| cert-manager                   | 1.12.2                         |
| iap                            | 7.8.2                          |
| kubermatic-operator            | 9.9.9-dev                      |
| local-kubevirt                 | 1.1.1                          |
| logging/loki                   | 2.5.0                          |
| logging/promtail               | 2.5.0                          |
| minio                          | RELEASE.2023-05-04T21-44-30Z   |
| mla/alertmanager-proxy         | 0.3.0                          |
| mla/consul                     | 1.14.2                         |
| mla/cortex                     | 1.14.1                         |
| mla/grafana                    | 10.2.2                         |
| mla/loki-distributed           | 2.9.2                          |
| mla/minio-lifecycle-mgr        | 0.1.0                          |
| mla/minio                      | RELEASE.2023-04-28T18-11-17Z   |
| mla/mla-secrets                | 0.1.0                          |
| monitoring/alertmanager        | 0.25.0                         |
| monitoring/blackbox-exporter   | 0.23.0                         |
| monitoring/grafana             | 9.5.1                          |
| monitoring/helm-exporter       | 1.2.5                          |
| monitoring/karma               | 0.114                          |
| monitoring/kube-state-metrics  | 2.8.2                          |
| monitoring/node-exporter       | 1.5.0                          |
| monitoring/prometheus          | 2.43.1                         |
| nginx-ingress-controller       | 1.11.5                         |
| oauth                          | 2.36.0                         |
| s3-exporter                    | 0.7                            |
| telemetry                      | 0.5.2                          |
