content/kubermatic/v2.29/architecture/compatibility/kkp-components-versioning/_index.en.md
+++
title = "KKP Components"
date = 2021-04-13T20:07:15+02:00
weight = 2

+++

## Kubermatic Kubernetes Platform Components

The following list is only applicable for the KKP version that is currently available. Kubermatic has a strong emphasis on security and reliability
of provided software and therefore releases updates regularly that also include component updates.

| KKP Components                 | Version                        |
| ------------------------------ | ------------------------------ |
| backup/velero                  | 1.14.0                         |
| cert-manager                   | 1.17.4                         |
| dex                            | 2.44.0                         |
| envoy-gateway-controller       | 1.6.1                          |
| gitops/kkp-argocd-apps         | 1.16.1                         |
| iap                            | 7.13.0                         |
| kubermatic-operator            | 9.9.9-dev                      |
| local-kubevirt                 | 1.1.1                          |
| logging/alloy                  | 1.9.2                          |
| logging/loki                   | 2.9.6                          |
| minio                          | RELEASE.2023-05-04T21-44-30Z   |
| mla/alertmanager-proxy         | 0.3.3                          |
| mla/consul                     | 1.14.2                         |
| mla/cortex                     | 1.14.1                         |
| mla/grafana                    | 10.2.2                         |
| mla/loki-distributed           | 2.9.2                          |
| mla/minio-lifecycle-mgr        | 0.1.0                          |
| mla/minio                      | RELEASE.2023-04-28T18-11-17Z   |
| mla/mla-secrets                | 0.1.0                          |
| monitoring/alertmanager        | 0.28.0                         |
| monitoring/blackbox-exporter   | 0.25.0                         |
| monitoring/grafana             | 10.4.1                         |
| monitoring/helm-exporter       | 1.2.16                         |
| monitoring/karma               | 0.120                          |
| monitoring/kube-state-metrics  | 2.15.0                         |
| monitoring/node-exporter       | 1.9.0                          |
| monitoring/prometheus          | 2.51.1                         |
| nginx-ingress-controller       | 1.14.3                         |
| s3-exporter                    | 0.7.1                          |
| telemetry                      | 0.5.2                          |
